--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <!-- понимаю что это нужно писать в отдельном css файле, не стал писать, так как здесь очень мало -->
     <style>
         body {
             background-color: #f8f9fa;
@@ -36,7 +37,6 @@
 </head>
 <body>
 <div class="container">
-
     <div class="container">
         <div class="row">
             <div class="col">
@@ -52,7 +52,6 @@
                     <tr>
                         <td><a href="/number/html/all" class="link-primary">Показать список уже добавленных автомобильных номеров.</a></td>
                     </tr>
-
                     </tbody>
                 </table>
             </div>
